--- a/templates/Pagina_carrinho.html
+++ b/templates/Pagina_carrinho.html
@@ -106,7 +106,7 @@
 
                 <div class="main__termos-container-button">
                     
-                    <form action="/comprar/tudo" class="main__termos-container-button-comprar">
+                    <form action="/comprar-tudo" class="main__termos-container-button-comprar" method="POST">
 
                         <button>Continuar para a compra</button>
 
