--- a/static/styles/style-pagina_perfil_usuario.css
+++ b/static/styles/style-pagina_perfil_usuario.css
@@ -180,7 +180,7 @@ a
     align-items: center;
 }
 
-.main__historico-container ul
+.main__historico-container-item
 {
     width: 800px;
     height: 400px;
