add: link de imagens dos desenvolvedores

--- a/templates/Pagina_apresentacao.html
+++ b/templates/Pagina_apresentacao.html
@@ -86,7 +86,7 @@
 
             <div class="main__apresentacao-devs-container">
 
-                <img src="" alt="">
+                <img src="https://cdn.discordapp.com/attachments/887827313750851616/1384308490977149109/image.png?ex=68529dff&is=68514c7f&hm=bcda8df1ef7bf2e6c98fe38f3249d491630caaa931912e6931bcbe58ca1ce383&" alt="">
 
                 <div>
                     
@@ -100,7 +100,7 @@
 
             <div class="main__apresentacao-devs-container">
 
-                <img src="" alt="">
+                <img src="https://cdn.discordapp.com/attachments/887827313750851616/1384308598057861220/image.png?ex=68529e18&is=68514c98&hm=023c87ad576eb1dbb151e70d8bbfccd27d5d2f954f5e14d3d80f8c474036678e&" alt="">
 
                 <div>
                     
@@ -114,7 +114,7 @@
 
             <div class="main__apresentacao-devs-container">
 
-                <img src="" alt="">
+                <img src="https://cdn.discordapp.com/attachments/1203830954515501107/1384496749023858860/IMG_20250617_083435.jpg?ex=6852a493&is=68515313&hm=92bfc10c9d0593466e6389b85d9d53360d1dfce1ca0de95217af2f928e3d7ee4&" alt="">
 
                 <div>
                     
