add: codigo em css da media da pagina do perfil do usuario

--- a/static/styles/media.css
+++ b/static/styles/media.css
@@ -290,7 +290,15 @@
 
                 gap: 20px;
             }
-   
+
+    /* Pagina do perfil */
+
+        /* Main */
+
+            .main__historico-container-item li
+            {
+                width: 260px;
+            }
 }
 
 
