--- a/templates/Inicial.html
+++ b/templates/Inicial.html
@@ -22,10 +22,10 @@
     <!-- links interno -->
 
     <!-- CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/style-pagina_inicial.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename='styles/style-cores_das_paginas.css')}}">
-    <link rel="stylesheet" href="{{url_for('static', filename='styles/style-fonts_das_paginas.css')}}">
-    <link rel="stylesheet" href="{{url_for('static', filename='styles/media.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/Inicial.css') }}">
+    <link rel="stylesheet" href="{{url_for('static', filename='styles/Cores.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='styles/Fonts.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='styles/Media.css')}}">
     
     <!-- JS -->
     <link rel="stylesheet" href="{{url_for('static', filename='js/Validar_busca.js')}}">
