--- a/templates/Busca.html
+++ b/templates/Busca.html
@@ -22,10 +22,10 @@
     <!-- links interno -->
 
     <!-- CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/style-pagina_busca.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename='styles/style-cores_das_paginas.css')}}">
-    <link rel="stylesheet" href="{{url_for('static', filename='styles/style-fonts_das_paginas.css')}}">
-    <link rel="stylesheet" href="{{url_for('static', filename='styles/media.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/Busca.css') }}">
+    <link rel="stylesheet" href="{{url_for('static', filename='styles/Cores.css')}}">
+        <link rel="stylesheet" href="{{url_for('static', filename='styles/Fonts.css')}}">
+        <link rel="stylesheet" href="{{url_for('static', filename='styles/Media.css')}}">
 
 </head>
 
