--- a/templates/Comprar_produtos.html
+++ b/templates/Comprar_produtos.html
@@ -11,10 +11,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" defer></script>
 
     <!-- Estilos personalizados -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/style-pagina_comprar_produtos.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/style-cores_das_paginas.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename='styles/style-fonts_das_paginas.css')}}">
-    <link rel="stylesheet" href="{{url_for('static', filename='styles/media.css')}}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='styles/Comprar_produtos.css') }}">
+        <link rel="stylesheet" href="{{url_for('static', filename='styles/Cores.css')}}">
+        <link rel="stylesheet" href="{{url_for('static', filename='styles/Fonts.css')}}">
+        <link rel="stylesheet" href="{{url_for('static', filename='styles/Media.css')}}">
     
 </head>
 <body>
