--- a/templates/Carrinho.html
+++ b/templates/Carrinho.html
@@ -112,7 +112,7 @@
 
                     </form>
 
-                    <form action="/limpar_carrinho" class="main__termos-container-button-cancelar">
+                    <form action="/cancelar-compra" class="main__termos-container-button-cancelar">
 
                         <button>Cancelar</button>
 
