--- a/static/styles/Inicial.css
+++ b/static/styles/Inicial.css
@@ -79,6 +79,7 @@ main
 {
     width: 100%;
     height: 100%;
+    min-height: 150vh;
 }
 
 
@@ -164,34 +165,12 @@ main
 /* Container dos cards */
 .main__games-jogos
 {
-    width: 650px;
-    height: 100%;
+    width: 100%;
+    height: 50%;
 
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-    gap: 100px;
-}
-
-.main__games-jogos-01
-{
-    width: 40%;
-    height: 100%;
-
-    display: flex;
-    flex-direction: column-reverse;
-    align-items: center;
-    gap: 20px;
-}
-
-.main__games-jogos-02
-{
-    width: 40%;
-    height: 100%;
-
-    display: flex;
-    flex-direction: column;
     align-items: center;
     gap: 20px;
 }
