criação da função para resgatar o video do banco de dados e exibir na interface de compras

--- a/templates/Comprar_produtos.html
+++ b/templates/Comprar_produtos.html
@@ -59,8 +59,8 @@
     <main class="main">
 
         <section class="main__produto">
-            
-            <img src="{{ produto.url }}" alt="{{ produto.nome_jogo }}">
+
+            <iframe src="{{video.url_video}}"></iframe>
 
             <div class="main__produto-detalhes">
                 
