--- a/static/styles/Comprar_produtos.css
+++ b/static/styles/Comprar_produtos.css
@@ -98,10 +98,10 @@ a
 
 }
 
-.main__produto img
+.main__produto iframe
 {
     width: 600px;
-    height: 80%;
+    height: 400px;
 
     margin: 20px;
 
