--- a/static/styles/Comprar_produtos.css
+++ b/static/styles/Comprar_produtos.css
@@ -299,27 +299,54 @@ a
     overflow-x: hidden;
 }
 
-.main__chat-container-usuario
-{
+.main__chat-container-usuario {
     width: 90%;
-    height: 50px;
-    min-height: 50px;
+    min-height: 60px;
 
     margin-top: 20px;
+    padding: 10px;
 
+    display: flex;
+    align-items: center;
+    gap: 15px;
+
+    background-color: var(--cinza_escuro);
     border: 1px solid var(--roxo);
-    border-bottom: 0px;
+    border-radius: 10px 10px 0 0;
+}
+
+.main__chat-container-usuario img {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+
+    border-radius: 50%;
+    border: 2px solid var(--verde_claro);
+}
+
+.main__chat-container-usuario span {
+    font-weight: bold;
+    font-size: 16px;
+    color: var(--branco);
 }
 
 
-.main__container-chat-comentario
-{
+
+.main__container-chat-comentario {
     width: 90%;
-    height: 150px;
+    padding: 15px;
     min-height: 100px;
 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background-color: var(--cinza_escuro);
+    color: var(--branco);
     border: 1px solid var(--roxo);
+    border-radius: 0 0 10px 10px;
 }
+
 
 
 .footer
