--- a/templates/Comprar_produtos.html
+++ b/templates/Comprar_produtos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,12 +12,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" defer></script>
 
     <!-- Estilos personalizados -->
-        <link rel="stylesheet" href="{{ url_for('static', filename='styles/Comprar_produtos.css') }}">
-        <link rel="stylesheet" href="{{url_for('static', filename='styles/Cores.css')}}">
-        <link rel="stylesheet" href="{{url_for('static', filename='styles/Fonts.css')}}">
-        <link rel="stylesheet" href="{{url_for('static', filename='styles/Media.css')}}">
-    
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/Comprar_produtos.css') }}">
+    <link rel="stylesheet" href="{{url_for('static', filename='styles/Cores.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='styles/Fonts.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='styles/Media.css')}}">
+
+
+    <!-- JS -->
+    <script src="{{ url_for('static', filename='js/Validar_busca.js') }}" defer></script>
 </head>
+
 <body>
 
     <!-- Navbar -->
@@ -35,8 +40,9 @@
 
             <a class="navbar-brand" href="/">ZCG Game Store</a>
 
-            <form class="d-flex" role="search" action="/buscar_jogos" method="GET" id="form-busca"  >
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="q" />
+            <form class="d-flex" role="search" action="/buscar_jogos" method="GET" id="form-busca">
+                <input id="campo-busca" class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
+                    name="q" />
                 <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
             </form>
 
@@ -54,7 +60,7 @@
             </div>
         </div>
     </nav>
-    
+
     <!-- Conteúdo Principal -->
     <main class="main">
 
@@ -63,25 +69,25 @@
             <iframe src="{{video.url_video}}"></iframe>
 
             <div class="main__produto-detalhes">
-                
+
                 <div class="main__produto-detalhes-nome">
-                    
+
                     <h1>{{ produto.nome_jogo }}</h1>
-                    
+
                 </div>
 
                 <div class="main__produto-detalhes-descricao">
-                    
+
                     <h2>Descrição do Produto</h2>
-                    
+
                     <p>{{ produto.descricao_jogo }}</p>
-                    
+
                     <h3>Preço:</h3>
-                    
+
                     <p class="text-success fw-bold fs-4">R$ {{ produto.preco }}</p>
-                    
+
                 </div>
-                
+
             </div>
 
             <form class="main__produto-compra" action="/carrinho/{{ produto.cod_jogo }}">
@@ -90,69 +96,54 @@
 
             </form>
 
-            
+
 
         </section>
 
         <!-- Seção de Comentários -->
         <section class="main__comentario">
-
             <div class="main__comentario-container">
-
                 <form class="main__comentario-container-input" method="POST" action="/post/comentario">
-
                     <input type="hidden" name="cod_jogo" value="{{ produto.cod_jogo }}">
 
                     <label for="mensagem">Comentário</label>
-
                     <textarea id="mensagem" name="mensagem" required></textarea>
 
                     <div class="main__comentario-container-button">
-
                         <button class="main__comentario-container-button-publicar" type="submit">Publicar</button>
-
                     </div>
-
-
                 </form>
-                
             </div>
 
             <div class="main__chat-container">
-
                 {% if mensagens %}
-
                     {% for m in mensagens %}
-
-                        <div class="main__chat-container-usuario">
-
-                            <span>{{ m.usuario }}</span>
-
+                        <div class="main__chat-container-usuario d-flex align-items-center gap-2">
+                            <img src="{{ url_for('static', filename='uploads/perfis/' + (m.foto_perfil if m.foto_perfil else 'default.png')) }}"    
+                                onerror="this.src='{{ url_for('static', filename='img/default.png') }}'"
+                                alt="Foto do Usuário"
+                                width="40"
+                                class="rounded-circle border border-success">
+                            <span class="fw-bold">{{ m.nome }}</span>
                         </div>
-
                         <div class="main__container-chat-comentario">
-
                             <span>{{ m.comentario }}</span>
-
                         </div>
-
                     {% endfor %}
-
                 {% else %}
-
                     <p class="text-muted">Nenhum comentário ainda. Seja o primeiro!</p>
-
                 {% endif %}
             </div>
 
         </section>
-                  
+
+
     </main>
 
     <!-- Rodapé -->
     <footer class="footer">
-    <span>@ ZCG GAME STORE 2025. Muitos direitos reservados</span>
-    <div class="footer__social">
+        <span>@ ZCG GAME STORE 2025. Muitos direitos reservados</span>
+        <div class="footer__social">
             <a href="https://www.facebook.com/?locale=pt_BR"><i class="bi bi-facebook"></i></a>
             <a href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
             <a href="https://br.linkedin.com/"><i class="bi bi-linkedin"></i></a>
@@ -161,4 +152,5 @@
     </footer>
 
 </body>
+
 </html>
