--- a/templates/Logar.html
+++ b/templates/Logar.html
@@ -29,6 +29,8 @@
         <link rel="stylesheet" href="{{url_for('static', filename='styles/Fonts.css')}}">
         <link rel="stylesheet" href="{{url_for('static', filename='styles/Media.css')}}">
 
+    <!-- JS -->
+    <script src="{{ url_for('static', filename='js/Validar_busca.js') }}" defer></script>
 </head>
 <body>
    
@@ -53,7 +55,7 @@
         <img src="" alt="">
         <a class="navbar-brand" href="/">ZCG Game Store</a>
         <form class="d-flex" role="search" action="/buscar_jogos" method="GET">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="q" />
+            <input id="campo-busca" class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="q" />
             <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
         </form>
 
